force-app/main/default/objects/SAC_EmailService__c/SAC_EmailService__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Mediante este Custom Setting se realizará la parametrización de la creación de los Casos en base a su correo de entrada.</description>
    <label>Configuración Email Service SAC</label>
</CustomObject>