force-app/main/default/objects/SAC_EmailService__c/fields/SAC_EmailEntrante__c.field-meta.xml
<CustomField>
    <fullName>SAC_EmailEntrante__c</fullName>
    <description>Indica el email desde el que se van a recibir los correos electrónicos y mediante el cual se va a realizar la parametrización.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Indica el email desde el que se van a recibir los correos electrónicos y mediante el cual se va a realizar la parametrización.</inlineHelpText>
    <label>Email entrante</label>
    <required>true</required>
    <type>Email</type>
</CustomField>