force-app/main/default/objects/SAC_EmailService__c/fields/SAC_GroupName__c.field-meta.xml
<CustomField>
    <fullName>SAC_GroupName__c</fullName>
    <description>Indica el developer Name de la cola que va a ser asignada. No es obligatorio rellenarlo. En caso de no rellenarlo, no se rellenará Queue por defecto en el campo Cola de trabajo.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Indica el developer Name de la cola que va a ser asignada. No es obligatorio rellenarlo. En caso de no rellenarlo, no se rellenará Queue por defecto en el campo Cola de trabajo.</inlineHelpText>
    <label>Name del grupo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>