force-app/main/default/objects/SAC_EmailService__c/fields/SAC_M2P__c.field-meta.xml
<CustomField>
    <fullName>SAC_M2P__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica si el caso debe responderse por el buzón de money to pay</description>
    <label>Responder por MoneyToPay</label>
    <type>Checkbox</type>
</CustomField>