force-app/main/default/objects/SAC_EmailService__c/fields/SAC_Naturaleza__c.field-meta.xml
<CustomField>
    <fullName>SAC_Naturaleza__c</fullName>
    <description>Se indica la Naturaleza que se va a rellenar en el Caso. Indicar el valor API de la picklist.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Se indica la Naturaleza que se va a rellenar en el Caso. Indicar el valor API de la picklist. No es obligatorio rellenarlo.</inlineHelpText>
    <label>Naturaleza</label>
    <length>15</length>
    <type>Text</type>
</CustomField>