force-app/main/default/objects/SAC_EmailService__c/fields/SAC_RecordTypeDeveloperName__c.field-meta.xml
<CustomField>
    <fullName>SAC_RecordTypeDeveloperName__c</fullName>
    <description>Indica el Developer Name del Caso que se va a querer asociar al Caso creado.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Indica el Developer Name del Caso que se va a querer asociar al Caso creado.</inlineHelpText>
    <label>Developer Name del Record Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>